[package]
name = "safe-sdk"
version = "0.1.0"
edition = "2021"
authors = ["James Prestwich <james@prestwi.ch>"]
description = "API Client for Gnosis Safe Transaction Service"
repository = "https://github.com/nomad-xyz/safe-sdk"
license = "Apache-2.0 OR MIT"
keywords = ["Ethereum", "Gnosis", "Safe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
async-trait = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
once_cell = "1.16.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.37"
tokio = { workspace = true }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-futures = "0.2.5"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true }
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
